modify README update config

--- a/cc/cc_config.json
+++ b/cc/cc_config.json
@@ -1,1 +1,1 @@
-{"name": "chrome_commucation", "description": "native messaging host", "path": "D:\\code\\chrome_console\\cc\\cc.bat", "type": "stdio", "allowed_origins": ["chrome-extension://mfepiakbogcbfhkcmjdaiaocfnjlghdf/"]}
+{"name": "chrome_commucation", "description": "native messaging host", "path": "D:\\code\\chrome_console\\python-chrome_devtool\\cc\\cc.bat", "type": "stdio", "allowed_origins": ["chrome-extension://gkldkifbemacpclipjclpbjpbjgonlhn/"]}
